--- a/style.css
+++ b/style.css
@@ -1,1 +1,128 @@
 
+/* Global Styles */
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+}
+
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+/* Header Styles */
+header {
+  background-color: #333;
+  color: #fff;
+  padding: 10px 0;
+}
+
+header a {
+  color: #fff;
+  text-decoration: none;
+}
+
+header nav ul {
+  margin: 0;
+}
+
+header nav ul li {
+  display: inline-block;
+  margin: 0 10px;
+}
+
+/* Home Section Styles */
+#home {
+  background-color: #f2f2f2;
+  padding: 50px 0;
+}
+
+#home .container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#home h1 {
+  font-size: 3em;
+  margin: 0;
+}
+
+#home h2 {
+  font-size: 2em;
+  margin-top: 10px;
+  margin-bottom: 0;
+}
+
+#home .contact {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+#home .contact li {
+  display: flex;
+  align-items: center;
+  margin: 0 10px;
+}
+
+#home .contact li a {
+  color: #333;
+}
+
+#home .contact li img {
+  height: 20px;
+  margin-right: 5px;
+}
+
+#home img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  margin-top: 20px;
+}
+
+/* Publications Section Styles */
+#publications {
+  background-color: #fff;
+  padding: 50px 0;
+}
+
+/* Projects Section Styles */
+#projects {
+  background-color: #f2f2f2;
+  padding: 50px 0;
+}
+
+/* Teaching Section Styles */
+#teaching {
+  background-color: #fff;
+  padding: 50px 0;
+}
+
+/* Activities Section Styles */
+#activities {
+  background-color: #f2f2f2;
+  padding: 50px 0;
+}
+
+/* Group Dissemination Section Styles */
+#group-dissemination {
+  background-color: #fff;
+  padding: 50px 0;
+}
+
+/* Footer Styles */
+footer {
+  background-color: #333;
+  color: #fff;
+  padding: 10px 0;
+  text-align: center;
+}
