--- a/styles.css
+++ b/styles.css
@@ -54,6 +54,23 @@ nav ul li a:focus {
     color: var(--primary-color);
 }
 
+/* Video Background */
+.video-background {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+
+#bg-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 /* Main content */
 main {
     display: flex;
@@ -145,6 +162,11 @@ button.btn.glow {
     transition: transform 0.3s;
 }
 
+.social-icons img {
+    width: 40px; /* Set icon size */
+    height: 40px; /* Set icon size */
+}
+
 .social-icons a:hover {
     transform: scale(1.2);
 }
@@ -161,6 +183,11 @@ button.btn.glow {
     margin-right: 15px;
     color: var(--primary-color);
     transition: color 0.3s, transform 0.3s;
+}
+
+.scholar-links img {
+    width: 40px; /* Set icon size */
+    height: 40px; /* Set icon size */
 }
 
 .scholar-links a:hover {
