--- a/styles.css
+++ b/styles.css
@@ -61,12 +61,18 @@ nav ul li a:focus {
 }
 
 .social-media img {
-    width: 6px; /* Adjust icon size */
-    height: 6px; /* Adjust icon size */
+    width: 10px; /* Adjust icon size */
+    height: 10px; /* Adjust icon size */
 }
 
 .social-media a:hover {
-    transform: scale(0.5);
+    transform: scale(1.2);
+}
+
+.social-icons img,
+.scholar-links img {
+    width: 10px; /* Adjust icon size */
+    height: 10px; /* Adjust icon size */
 }
 
 /* Main content */
